--- a/frontend/src/styles/UseCaseUploader.module.css
+++ b/frontend/src/styles/UseCaseUploader.module.css
@@ -3,12 +3,11 @@
     color: #ffffff;
     padding: 2rem;
     border-radius: 8px;
-    max-width: 800px;
+    max-width: 60rem;
     margin: 2rem auto;
     font-family: 'Arial', sans-serif;
     border: 4px solid #ffffff;
 }
-
 
 .title {
     text-align: center;
@@ -20,7 +19,6 @@
     justify-content: center;
     margin-bottom: 1rem;
 }
-
 
 .tabButton {
     background-color: #1e1e1e;
@@ -57,7 +55,7 @@
 
 .textarea {
     width: 100%;
-    min-height: 150px;
+    min-height: 300px;
     padding: 0.75rem;
     border-radius: 4px;
     border: 1px solid #444;
@@ -81,7 +79,6 @@
     align-self: center;
 }
 
-
 .submitButton:hover {
     background-color: #7e3ff2;
 }
@@ -96,12 +93,19 @@
     margin-top: 1.5rem;
 }
 
-
-
 .domainList {
     list-style-type: none;
     padding: 0;
     margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+}
+
+.removedList {
+    list-style-type: none;
+    padding: 0;
+    margin: 1rem 0 0 0;
     display: flex;
     flex-wrap: wrap;
     gap: 0.5rem;
@@ -112,12 +116,30 @@
     background-color: #1e1e1e;
     padding: 0.5rem;
     border-radius: 4px;
+    cursor: pointer;
     transition: text-decoration 0.2s ease;
 }
 
-.domainListItem:hover {
-    cursor: pointer;
+.domainList li:not(.removed):hover {
     text-decoration: line-through;
+}
+
+.removed {
+    background-color: #b21b1b;
+    text-decoration: none !important;
+}
+
+.deletedHeader {
+    display: inline-flex;
+    align-items: center;
+    margin-top: 1rem;
+    cursor: pointer;
+    font-size: 1.2rem;
+}
+
+.deletedHeader .dropdownIcon {
+    margin-left: 0.5rem;
+    font-size: 1.2rem;
 }
 
 .addObjectContainer {
